--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/three": "^0.181.0",
     "axios": "^1.13.2",
-    "cesium": "^1.135.0",
     "element-plus": "^2.11.7",
     "pinia": "^3.0.3",
+    "three": "^0.181.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/axios": "^0.9.36",
-    "@types/cesium": "^1.67.14",
     "@types/node": "^22.18.11",
     "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^6.0.1",
